--- a/app/src/main/res/drawable/text_insert_drawable.xml
+++ b/app/src/main/res/drawable/text_insert_drawable.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#000"></solid>
-            <corners android:radius="60dp"></corners>
+            <solid android:color="#000" />
+            <corners android:radius="60dp" />
         </shape>
     </item>
 </selector>
