--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,8 +25,8 @@
                 android:id="@+id/trip_avatar"
                 android:layout_width="400dp"
                 android:layout_height="228dp"
-                android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="60dp"
                 android:foregroundGravity="center"
                 android:scaleType="centerCrop"
@@ -40,9 +39,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_margin="8dp"
             android:background="@color/white"
             android:onClick="setTrip_avatar"
-            android:layout_margin="8dp"
             android:text="@string/edit_picture"
             android:textAllCaps="false"
             android:textColor="@android:color/darker_gray" />
@@ -50,9 +49,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -77,9 +76,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -105,9 +104,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -133,9 +132,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -153,17 +152,17 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@android:drawable/btn_dropdown"
-                android:spinnerMode="dropdown"
-                android:entries="@array/Languages"/>
+                android:entries="@array/Languages"
+                android:spinnerMode="dropdown" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -171,8 +170,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:text="Meeting point"
                 android:orientation="vertical"
+                android:text="Meeting point"
                 android:textAllCaps="true"
                 android:textSize="12sp"/>
 
@@ -183,17 +182,17 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Trip Location"
-                android:orientation="vertical"
-                android:inputType="textCapSentences|textMultiLine" />
+                android:inputType="textCapSentences|textMultiLine"
+                android:orientation="vertical" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -201,8 +200,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
-                android:text="Maximum visitors"
                 android:orientation="vertical"
+                android:text="Maximum visitors"
                 android:textAllCaps="true"
                 android:textSize="12sp"/>
 
@@ -213,8 +212,8 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Maximum count of visitors"
-                android:orientation="vertical"
-                android:inputType="number" />
+                android:inputType="number"
+                android:orientation="vertical" />
 
         </LinearLayout>
 
