--- a/app/src/main/res/layout/activity_trip_list.xml
+++ b/app/src/main/res/layout/activity_trip_list.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pelicanus.insight.TripList"
     android:background="@drawable/background_login"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.pelicanus.insight.TripList">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/trip_list"
         android:layout_width="match_parent"
-        android:clickable="true"
         android:layout_height="match_parent"
         android:layout_margin="15dp"
         android:background="@color/white"
+        android:clickable="true"
         android:padding="5dp" >
 
     </android.support.v7.widget.RecyclerView>
