Поле max_visitors при создании и отображении экскурсии

--- a/app/src/main/res/layout/activity_create_trip.xml
+++ b/app/src/main/res/layout/activity_create_trip.xml
@@ -213,6 +213,7 @@
                 android:ems="10"
                 android:hint="Maximum count of visitors"
                 android:inputType="number"
+                android:numeric="signed"
                 android:orientation="vertical" />
 
         </LinearLayout>
