--- a/app/src/main/res/layout/activity_edit_profile_actiity.xml
+++ b/app/src/main/res/layout/activity_edit_profile_actiity.xml
@@ -113,7 +113,9 @@
         android:layout_marginEnd="15dp"
         android:layout_marginTop="5dp"
         android:onClick="onConfrim"
-        android:padding="20dp"
+        android:padding="10dp"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/white"
         android:text="Confirm"
         tools:onClick="onConfrim" />
 
@@ -158,7 +160,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:padding="20dp"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:padding="10dp"
             android:text="Confirm"/>
 
     </LinearLayout>
