--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,6 +83,9 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:onClick="SignInFirebaseLoginPass"
+                    android:padding="10dp"
+                    android:background="@color/colorPrimary"
+                    android:textColor="@color/white"
                     android:text="@string/signin"
                     />
 
