--- a/app/src/main/res/layout/content_menu_main.xml
+++ b/app/src/main/res/layout/content_menu_main.xml
@@ -109,6 +109,9 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/more_info"
+                    android:padding="10dp"
+                    android:background="@android:color/transparent"
+                    android:textColor="@color/colorPrimary"
                     android:clickable="true"
                     android:focusable="true"
                     android:layout_marginBottom="10dp"/>
@@ -224,142 +227,6 @@
 
         </LinearLayout>
 
-
-        <!--Recently added section-->
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="25dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/recently_added"
-                android:layout_margin="10dp"
-                android:textSize="18sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                android:textAllCaps="true"/>
-
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="@color/white">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <android.support.v7.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/ra_excursion_1_img"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="10dp"
-                                android:layout_gravity="center"
-                                android:src="@drawable/city_zaglushka"/>
-
-                            <TextView
-                                android:id="@+id/ra_excursion_1_name"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="start"
-                                android:gravity="bottom"
-                                android:text="Excursion name"
-                                android:textSize="14sp"
-                                android:textColor="@android:color/black"
-                                android:layout_margin="5dp"/>
-
-                        </LinearLayout>
-
-                    </android.support.v7.widget.CardView>
-
-                    <android.support.v7.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/ra_excursion_2_img"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="10dp"
-                                android:layout_gravity="center"
-                                android:src="@drawable/city_zaglushka"/>
-
-                            <TextView
-                                android:id="@+id/ra_excursion_2_name"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="start"
-                                android:gravity="bottom"
-                                android:text="Excursion name2"
-                                android:textSize="14sp"
-                                android:textColor="@android:color/black"
-                                android:layout_margin="5dp"/>
-
-                        </LinearLayout>
-
-                    </android.support.v7.widget.CardView>
-
-                    <android.support.v7.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/ra_excursion_3_img"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_margin="10dp"
-                                android:layout_gravity="center"
-                                android:src="@drawable/city_zaglushka"/>
-
-                            <TextView
-                                android:id="@+id/ra_excursion_3_name"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="start"
-                                android:gravity="bottom"
-                                android:text="Excursion name3"
-                                android:textSize="14sp"
-                                android:textColor="@android:color/black"
-                                android:layout_margin="5dp"/>
-
-                        </LinearLayout>
-
-                    </android.support.v7.widget.CardView>
-
-                </LinearLayout>
-
-            </HorizontalScrollView>
-
-
-        </LinearLayout>
 
     </LinearLayout>
 
