--- a/app/src/main/res/layout/change_pass_layout.xml
+++ b/app/src/main/res/layout/change_pass_layout.xml
@@ -4,42 +4,45 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="15dp"
     android:layout_marginStart="15dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="20dp">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_password"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:hint="Old password">
 
         <EditText
             android:id="@+id/input_password"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Old password" />
+            android:layout_height="wrap_content" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_new_password1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:hint="New password">
 
         <EditText
             android:id="@+id/input_new_password1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="New password" />
+            android:importantForAutofill="noExcludeDescendants" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_new_password2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:hint="Repeat your new password">
 
         <EditText
             android:id="@+id/input_new_password2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Repeat your new password" />
+            android:importantForAutofill="noExcludeDescendants" />
     </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
