--- a/app/src/main/res/layout/activity_trip_list.xml
+++ b/app/src/main/res/layout/activity_trip_list.xml
@@ -45,9 +45,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:textSize="14dp"
-                android:hint="#Tags"
-                android:textColor="@color/white"/>
+                android:textSize="14sp"
+                android:background="@color/white"
+                android:padding="7dp"
+                android:hint="#Tags" />
 
             <Button
                 android:layout_width="wrap_content"
