--- a/app/src/main/res/layout/content_menu_main.xml
+++ b/app/src/main/res/layout/content_menu_main.xml
@@ -114,7 +114,8 @@
                     android:textColor="@color/colorPrimary"
                     android:clickable="true"
                     android:focusable="true"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_marginBottom="10dp"
+                    android:onClick="OpenMyExcursions"/>
 
             </LinearLayout>
 
