--- a/app/src/main/res/layout/activity_how_to_group.xml
+++ b/app/src/main/res/layout/activity_how_to_group.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:layout_margin="10dp">
 
     <TextView
         android:id="@+id/listTitle"
@@ -12,5 +13,6 @@
         android:paddingBottom="10dp"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:paddingTop="10dp"
+        android:textSize="20sp"
         android:textColor="@android:color/black" />
 </LinearLayout>
